[gd_scene load_steps=7 format=3 uid="uid://5g4r3st6wedh"]

[ext_resource type="Script" path="res://menus/Main Menu.gd" id="1_4b3w0"]
[ext_resource type="Script" path="res://menus/Main Menu Page.gd" id="1_oqu34"]
[ext_resource type="PackedScene" uid="uid://dtqci11hd2hru" path="res://menus/Menu World.tscn" id="2_bsx7i"]
[ext_resource type="Script" path="res://menus/Save Menu Page.gd" id="2_pqikd"]
[ext_resource type="Script" path="res://menus/New Save Menu Page.gd" id="3_x7hvy"]
[ext_resource type="Script" path="res://menus/CreditsPage.gd" id="5_7l3vm"]

[node name="Main Menu" type="Control" node_paths=PackedStringArray("main_page", "save_page", "new_save_page", "credits_page", "leftside", "current", "rightside", "current_carrier", "new_carrier")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4b3w0")
main_page = NodePath("Current Menu/Main Menu")
save_page = NodePath("Rightside Menus/Save Menu")
new_save_page = NodePath("Rightside Menus/New Save Menu")
credits_page = NodePath("Rightside Menus/Credits")
leftside = NodePath("Leftside Menus")
current = NodePath("Current Menu")
rightside = NodePath("Rightside Menus")
current_carrier = NodePath("Current Carrier")
new_carrier = NodePath("New Carrier")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="World" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_bsx7i")]

[node name="Leftside Menus" type="Control" parent="."]
layout_mode = 1
anchor_left = -1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Current Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main Menu" type="HBoxContainer" parent="Current Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_oqu34")

[node name="VBoxContainer" type="VBoxContainer" parent="Current Menu/Main Menu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[node name="Play Singleplayer" type="Button" parent="Current Menu/Main Menu/VBoxContainer"]
layout_mode = 2
text = "Play Singleplayer"

[node name="Play Multiplayer" type="Button" parent="Current Menu/Main Menu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Play Multiplayer"

[node name="Settings" type="Button" parent="Current Menu/Main Menu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Settings
"

[node name="Credits" type="Button" parent="Current Menu/Main Menu/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="Current Menu/Main Menu/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Rightside Menus" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save Menu" type="Panel" parent="Rightside Menus"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_pqikd")

[node name="Saved Games Label" type="Label" parent="Rightside Menus/Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -52.0
offset_right = 52.0
grow_horizontal = 2
text = "Saved Games"
vertical_alignment = 1

[node name="Saved Games List" type="ItemList" parent="Rightside Menus/Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.85

[node name="New Save" type="Button" parent="Rightside Menus/Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.88
anchor_right = 0.49
anchor_bottom = 0.96
text = "New Save"

[node name="Load Save" type="Button" parent="Rightside Menus/Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.88
anchor_right = 0.97
anchor_bottom = 0.96
disabled = true
text = "Load Save"

[node name="Back Button" type="Button" parent="Rightside Menus/Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.1
anchor_bottom = 0.08
text = "< Back"

[node name="New Save Menu" type="Panel" parent="Rightside Menus"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_x7hvy")

[node name="Title" type="Label" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.05
anchor_right = 0.7
anchor_bottom = 0.1
theme_type_variation = &"HeaderLarge"
text = "New Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save Name Label" type="Label" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.3
text = "Save Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save Name Input" type="LineEdit" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.35
anchor_right = 0.75
anchor_bottom = 0.4
placeholder_text = "world"
alignment = 1

[node name="Save Name Message" type="Label" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.4
anchor_right = 0.75
anchor_bottom = 0.4
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seed Label" type="Label" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
text = "Seed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seed Input" type="LineEdit" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.55
anchor_right = 0.75
anchor_bottom = 0.6
placeholder_text = "leave random"
alignment = 1

[node name="Create Save" type="Button" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.93
anchor_right = 0.6
anchor_bottom = 0.98
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Create New Game"

[node name="Back Button" type="Button" parent="Rightside Menus/New Save Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.1
anchor_bottom = 0.08
text = "< Back"

[node name="Credits" type="Panel" parent="Rightside Menus" node_paths=PackedStringArray("credits_label")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_7l3vm")
credits_label = NodePath("ScrollContainer/Label")

[node name="Back Button" type="Button" parent="Rightside Menus/Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.1
anchor_bottom = 0.08
text = "< Back"

[node name="ScrollContainer" type="Control" parent="Rightside Menus/Credits"]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Rightside Menus/Credits/ScrollContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]
[font_size=30][b]A Flowering Apocalypse[/b][/font_size]




[font_size=20]Special Thanks to:[/font_size]

[url=https://www.tumblr.com/otherwindow]otherwindow[/url] - idea inspiration

[/center]"
deselect_on_focus_loss_enabled = false

[node name="Current Carrier" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="New Carrier" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="Current Menu/Main Menu/VBoxContainer/Play Singleplayer" to="Current Menu/Main Menu" method="_on_play_singleplayer_pressed"]
[connection signal="pressed" from="Current Menu/Main Menu/VBoxContainer/Play Multiplayer" to="Current Menu/Main Menu" method="_on_play_multiplayer_pressed"]
[connection signal="pressed" from="Current Menu/Main Menu/VBoxContainer/Settings" to="Current Menu/Main Menu" method="_on_settings_pressed"]
[connection signal="pressed" from="Current Menu/Main Menu/VBoxContainer/Credits" to="Current Menu/Main Menu" method="_on_credits_pressed"]
[connection signal="pressed" from="Current Menu/Main Menu/VBoxContainer/Quit" to="Current Menu/Main Menu" method="_on_quit_pressed"]
[connection signal="item_selected" from="Rightside Menus/Save Menu/Saved Games List" to="Rightside Menus/Save Menu" method="_on_saved_games_list_item_selected"]
[connection signal="pressed" from="Rightside Menus/Save Menu/New Save" to="Rightside Menus/Save Menu" method="_on_new_save_pressed"]
[connection signal="pressed" from="Rightside Menus/Save Menu/Load Save" to="Rightside Menus/Save Menu" method="_on_load_save_pressed"]
[connection signal="pressed" from="Rightside Menus/Save Menu/Back Button" to="Rightside Menus/Save Menu" method="_on_back_button_pressed"]
[connection signal="text_changed" from="Rightside Menus/New Save Menu/Save Name Input" to="Rightside Menus/New Save Menu" method="_on_save_name_input_text_changed"]
[connection signal="pressed" from="Rightside Menus/New Save Menu/Create Save" to="Rightside Menus/New Save Menu" method="_on_create_save_pressed"]
[connection signal="pressed" from="Rightside Menus/New Save Menu/Back Button" to="Rightside Menus/New Save Menu" method="_on_back_button_pressed"]
[connection signal="pressed" from="Rightside Menus/Credits/Back Button" to="Rightside Menus/Credits" method="_on_back_button_pressed"]
